#  Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
#  See https://llvm.org/LICENSE.txt for license information.
#  SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
#  Copyright (c) 2024.

[project]
name = "eudsl-tblgen"
version = "0.0.1"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/llvm/eudsl"

[build-system]
requires = [
    "nanobind>=2.2.0",
    "scikit-build-core>=0.10.7",
    "typing_extensions>=4.12.2"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
cmake.source-dir = "."
wheel.packages = ["src/eudsl_tblgen"]
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
CMAKE_PREFIX_PATH = { env = "CMAKE_PREFIX_PATH", default = "" }
CMAKE_C_FLAGS = { env = "CMAKE_C_FLAGS", default = "" }
CMAKE_CXX_FLAGS = { env = "CMAKE_CXX_FLAGS", default = "" }
CMAKE_C_COMPILER_LAUNCHER = { env = "CMAKE_C_COMPILER_LAUNCHER", default = "" }
CMAKE_CXX_COMPILER_LAUNCHER = { env = "CMAKE_CXX_COMPILER_LAUNCHER", default = "" }
CMAKE_EXE_LINKER_FLAGS_INIT = { env = "CMAKE_EXE_LINKER_FLAGS_INIT", default = "" }
CMAKE_SHARED_LINKER_FLAGS_INIT = { env = "CMAKE_SHARED_LINKER_FLAGS_INIT", default = "" }
CMAKE_MODULE_LINKER_FLAGS_INIT = { env = "CMAKE_MODULE_LINKER_FLAGS_INIT", default = "" }
CMAKE_OSX_DEPLOYMENT_TARGET = { env = "CMAKE_OSX_DEPLOYMENT_TARGET", default = "11.0" }
CMAKE_C_VISIBILITY_PRESET = "hidden"
CMAKE_CXX_VISIBILITY_PRESET = "hidden"
CMAKE_VISIBILITY_INLINES_HIDDEN = "ON"
CMAKE_VERBOSE_MAKEFILE = "ON"
LLVM_DIR = { env = "LLVM_DIR", default = "EMPTY" }
MLIR_DIR = { env = "MLIR_DIR", default = "EMPTY" }
LLVM_TEMPORARILY_ALLOW_OLD_TOOLCHAIN = "ON"

[tool.cibuildwheel]
build-verbosity = 1
skip = ["*-manylinux_i686", "*-musllinux*", "pp*", "*-win32"]
archs = ["auto64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
environment-pass = [
    "CMAKE_PREFIX_PATH",
    "CMAKE_C_FLAGS",
    "CMAKE_CXX_FLAGS",
    "CMAKE_C_COMPILER_LAUNCHER",
    "CMAKE_CXX_COMPILER_LAUNCHER",
    "CMAKE_GENERATOR",
    "CC",
    "CXX",
    "LLVM_DIR",
    "MLIR_DIR",
    # ccache
    "CCACHE_DIR",
    "CCACHE_MAXSIZE=700M",
    "CCACHE_SLOPPINESS",
    "CCACHE_CPP2",
    "CCACHE_UMASK",
    "CCACHE_NOHASHDIR",
    "PIP_FIND_LINKS",
]
before-build = [
    "export CCACHE_DIR=$CCACHE_DIR/$(python -c 'import platform; print(platform.python_version())')",
    "mkdir -p $CCACHE_DIR",
    "ccache -z"
]
# uncomment to make sure ccache is working inside containers
test-command = "ccache -s"

[tool.cibuildwheel.linux]
before-all = [
    "set -x",
    "yum install -y clang",
    # ccache
    "echo $(if [ \"$(arch)\" == \"x86_64\" ]; then curl -sLO https://github.com/ccache/ccache/releases/download/v4.10.2/ccache-4.10.2-linux-x86_64.tar.xz && tar -xf ccache-4.10.2-linux-x86_64.tar.xz && pushd ccache-4.10.2-linux-x86_64 && make install && ln -s /usr/local/bin/ccache /usr/bin/ccache && popd; fi)",
    "echo $(if [ \"$(arch)\" == \"aarch64\" ]; then dnf install -y ccache; fi)",
    "ccache -z"
]
# synchronize TZ with host so ccache files have correct timestamp
container-engine = { name = "docker", create-args = ["-v", "/etc/timezone:/etc/timezone:ro", "-v", "/etc/localtime:/etc/localtime:ro"] }

[tool.cibuildwheel.macos]
before-build = [
    "ccache -z"
]

[tool.cibuildwheel.windows]
before-build = [
    "ccache -z"
]
