# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# Copyright (c) 2025.

[project]
name = "mlir-python-bindings"
dynamic = ["version"]
requires-python = ">=3.8,<=3.14"
dependencies = [
    "numpy>=1.19.5",
    # required but no package for it...
    # "ml_dtypes>=0.5.0, <=0.6.0"
]

[project.urls]
Homepage = "https://github.com/llvm/llvm-project"
Discussions = "https://discourse.llvm.org/"
"Issue Tracker" = "https://github.com/llvm/llvm-project/issues?q=is%3Aissue%20state%3Aopen%20label%3Amlir%3Apython%20"
"Source Code" = "https://github.com/llvm/llvm-project/tree/main/mlir/python"

[build-system]
requires = [
    "scikit-build-core==0.10.7",
    "typing_extensions==4.12.2",
    # https://github.com/wjakob/nanobind/commit/dd350fe81931a1b362196cb415d188c36422766e#diff-8599263e788c107944d356ce118965942735cfbe16289ccf98ee5f8a33f0e808
    # error: static assertion failed due to requirement 'pyobj_name::total_count * sizeof(_object *) == 96'
    "nanobind>=2.4, <=2.9.2",
    "pybind11>=2.10.0, <=2.13.6",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
experimental = true
metadata.version.provider = "version"
metadata.version.provider-path = "."

minimum-version = "0.10"
build-dir = "build"
cmake.source-dir = "."
wheel.exclude = ["bin", "include", "lib", "src", "share"]
# for installing/distributing only the python stuff
build.targets = ["MLIRPythonWasmModules"]
install.components = ["MLIRPythonWasmModules"]

[tool.scikit-build.cmake.define]
MLIR_DIR = { env = "MLIR_DIR", default = "" }
CMAKE_PREFIX_PATH = { env = "CMAKE_PREFIX_PATH", default = "" }
CMAKE_BUILD_TYPE = { env = "CMAKE_BUILD_TYPE", default = "Release" }
CMAKE_C_COMPILER_LAUNCHER = { env = "CMAKE_C_COMPILER_LAUNCHER", default = "" }
CMAKE_CXX_COMPILER_LAUNCHER = { env = "CMAKE_CXX_COMPILER_LAUNCHER", default = "" }
# have no idea why but explicitly setting Ninja triggers EVEN THOUGH THE DEFAULT IS NINJA!!!
# The install of MLIRPythonWasmModules.extension._mlirDialectsTransform.dso target requires changing an RPATH from the build tree, but this is not supported with the Ninja generator unless on an ELF-based or XCOFF-based platform. The CMAKE_BUILD_WITH_INSTALL_RPATH variable may be set to avoid this step.
# (and setting CMAKE_BUILD_WITH_INSTALL_RPATH does nothing)
# CMAKE_GENERATOR = { env = "CMAKE_GENERATOR", default = "Ninja" }
CMAKE_PLATFORM_NO_VERSIONED_SONAME = "ON"
CMAKE_VISIBILITY_INLINES_HIDDEN = "ON"
CMAKE_C_VISIBILITY_PRESET = "hidden"
CMAKE_CXX_VISIBILITY_PRESET = "hidden"
CMAKE_EXE_LINKER_FLAGS = "-sALLOW_TABLE_GROWTH -sASSERTIONS -sWASM_BIGINT"
CMAKE_SHARED_LINKER_FLAGS = "-sALLOW_TABLE_GROWTH -sASSERTIONS -sWASM_BIGINT"
CMAKE_MODULE_LINKER_FLAGS = "-sALLOW_TABLE_GROWTH -sASSERTIONS -sWASM_BIGINT"
CMAKE_VERBOSE_MAKEFILE = "ON"
# De-duplicate libraries on link lines based on linker capabilities.
# minimum cmake version is 3.29
CMAKE_POLICY_DEFAULT_CMP0156 = "NEW"

# so that NATIVE doesn't try to get built
LLVM_NATIVE_TOOL_DIR = { env = "LLVM_NATIVE_TOOL_DIR", default = "" }
LLVM_TABLEGEN = { env = "LLVM_TABLEGEN", default = "" }
MLIR_LINALG_ODS_YAML_GEN = { env = "MLIR_LINALG_ODS_YAML_GEN", default = "" }
MLIR_TABLEGEN = { env = "MLIR_TABLEGEN", default = "" }

MLIR_ENABLE_BINDINGS_PYTHON = "ON"
