# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# Copyright (c) 2025.

[project]
name = "mlir-python-bindings"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.5",
    "PyYAML>=5.4.0, <=6.0.1",
    "ml_dtypes>=0.1.0, <=0.6.0; python_version<'3.13'",
    "ml_dtypes>=0.5.0, <=0.6.0; python_version>='3.13'",
]

[project.urls]
Homepage = "https://github.com/llvm/llvm-project"
Discussions = "https://discourse.llvm.org/"
"Issue Tracker" = "https://github.com/llvm/llvm-project/issues?q=is%3Aissue%20state%3Aopen%20label%3Amlir%3Apython%20"
"Source Code" = "https://github.com/llvm/llvm-project/tree/main/mlir/python"

[build-system]
requires = [
    "scikit-build-core>=0.10.7",
    "typing_extensions>=4.12.2",
    "nanobind>=2.9, <3.0",
    "pybind11>=2.10.0, <=2.13.6",
    "numpy>=1.19.5, <=2.3.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# all of this just for a dynamic version...
experimental = true
metadata.version.provider = "version"
metadata.version.provider-path = "."

# This is the minimum version of scikit-build-core.
minimum-version = "0.10.7"
# This pyproject.toml must be adjacent to the root CMakeLists.txt (wherever project(...) is specified).
cmake.source-dir = "."
# This is for installing/distributing the python bindings target and only the python bindings target.
build.targets = ["MLIRPythonModules"]
install.components = ["MLIRPythonModules"]

[tool.scikit-build.cmake.define]
# Optional
CMAKE_C_COMPILER = { env = "CMAKE_C_COMPILER", default = "" }
CMAKE_CXX_COMPILER = { env = "CMAKE_CXX_COMPILER", default = "" }
CMAKE_C_COMPILER_LAUNCHER = { env = "CMAKE_C_COMPILER_LAUNCHER", default = "" }
CMAKE_CXX_COMPILER_LAUNCHER = { env = "CMAKE_CXX_COMPILER_LAUNCHER", default = "" }
CMAKE_GENERATOR = { env = "CMAKE_GENERATOR", default = "Ninja" }
CMAKE_PLATFORM_NO_VERSIONED_SONAME = "ON"
CMAKE_MSVC_RUNTIME_LIBRARY = "MultiThreaded"
CMAKE_C_FLAGS = { env = "CMAKE_C_FLAGS", default = "" }
CMAKE_CXX_FLAGS = { env = "CMAKE_CXX_FLAGS", default = "" }
LLVM_USE_LINKER = { env = "LLVM_USE_LINKER", default = "" }
# Optional but highly recommended (this makes the bindings compatible with other bindings packages
# by preventing symbol collisions).
CMAKE_VISIBILITY_INLINES_HIDDEN = "ON"
CMAKE_C_VISIBILITY_PRESET = "hidden"
CMAKE_CXX_VISIBILITY_PRESET = "hidden"

MLIR_DIR = { env = "MLIR_DIR", default = "" }
CMAKE_PREFIX_PATH = { env = "CMAKE_PREFIX_PATH", default = "" }
# Non-optional
CMAKE_BUILD_TYPE = { env = "CMAKE_BUILD_TYPE", default = "Release" }
MLIR_ENABLE_BINDINGS_PYTHON = "ON"

[tool.cibuildwheel]
enable = "cpython-prerelease cpython-freethreading"
build-verbosity = 3
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
archs = ["native"]

[tool.cibuildwheel.linux]
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
skip = ["*-manylinux_i686", "*-musllinux*"]
environment-pass = [
    "CMAKE_CXX_FLAGS",
    "CMAKE_C_FLAGS",
    "CMAKE_PREFIX_PATH",
    "MLIR_DIR",
    "WHEEL_VERSION",
]
repair-wheel-command = [
    "LD_LIBRARY_PATH=$CMAKE_PREFIX_PATH/lib auditwheel repair -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.macos]
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
repair-wheel-command = [
    "DYLD_LIBRARY_PATH=$CMAKE_PREFIX_PATH/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
]

[tool.cibuildwheel.windows]
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
skip = ["*-win32"]
# repair-wheel-command = "delvewheel repair -v -w {dest_dir} {wheel}"
